--- a/web.css
+++ b/web.css
@@ -563,7 +563,9 @@ of dropdown*/
   }
 
   .arrow-down img.arrow-image {
-    width: 10%; /* Adjust si
+    width: 10%; 
+  }
+}
 
 
 /*------------------------------SERVICES SECTIONS ------------------------------*/
