--- a/web.css
+++ b/web.css
@@ -525,28 +525,40 @@ of dropdown*/
 
 @media (max-width: 580px) {
   /* Styles for mobile devices */
+
+  .welcome-dropdown {
+    width: 100%; /* Full width */
+    height: 500px;
+  }
+
   .dropdown-text {
-    font-size: 1.4em; /* Reduce font size for better fit on smaller screens */
-    padding-left: 40px;
+    font-size: 1.3em; /* Reduce font size for better fit on smaller screens */
+    padding-left: 0px;
+    text-align: center;
+    padding-top: 200px;
   }
 
   .button-container {
 
-    padding-left: 40px; /* Adjust padding for smaller screens */
+    padding-left: 100px; /* Adjust padding for smaller screens */
     gap: 20px; /* Reduce space between buttons */
   }
 
   .button-container a {
-    font-size: 1.1em; /* Reduce button text size for smaller screens */
+    font-size: 1.3m; /* Reduce button text size for smaller screens */
     margin-top: -30px;
     padding: 10px 20px; /* Reduce padding for smaller screens */
   }
+  .arrow-down img.arrow-image {
+    width: 12%; /* Increase size slightly for better visibility on smaller screens */
+    height: 12%; /* Maintain aspect ratio */
+  }
 }
 
-@media (max-width: 580px) {
+@media (max-width: 480px) {
   /* Styles for extra small mobile devices */
   .dropdown-text {
-    font-size: 0.2em; /* Further reduce font size for tiny screens */
+    font-size: 1.4em; /* Further reduce font size for tiny screens */
     padding-left: 30px; /* Provide minimal padding to prevent text from being too close to the edge */
     padding-right: 10px;
   }
