--- a/web.css
+++ b/web.css
@@ -859,7 +859,7 @@ of dropdown*/
 
 
 
-
+/*------------------------------------HERO SECTION*******************************/
 
 .hero-section {
   display: flex;
@@ -932,6 +932,51 @@ flex-shrink: 0; /* Prevent the image from shrinking */
   height: 100%; /* Maintain aspect ratio */
   border-radius: 8px; /* Optional: Rounded corners */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Shadow for the image */
+}
+
+
+@media (max-width: 580px) {
+  /* Styles for mobile devices */
+.hero-section{
+    padding-left: 90px;
+    padding-bottom: 280px;
+}
+  .hero-content h1 {
+    font-size: 1.5em; /* Adjust font size */
+    margin-bottom: 20px; /* Spacing */
+    font-weight: bold;
+  }
+  
+  .hero-content p {
+    font-size: 1.0em; /* Adjust font size */
+    margin-bottom: 20px; /* Spacing */
+    line-height: 1.6; /* Adjust line height for readability */
+    max-width: 700px;
+  }
+  .hero-image {
+    position: absolute;
+   /* Prevent the image from shrinking */
+   left:100px;
+   bottom: 20px;
+  
+   
+  }
+    
+    .hero-image img {
+      width: 80%;
+    
+      height: 100% ; /* Maintain aspect ratio */
+      border-radius: 8px; /* Optional: Rounded corners */
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Shadow for the image */
+      z-index: 100000000 !important;
+    }
+}
+
+
+@media (max-width: 470px) {
+  /* Styles for smaller mobile devices */
+
+  
 }
 
 
