--- a/web.css
+++ b/web.css
@@ -1210,7 +1210,7 @@ of dropdown*/
 /* For screens smaller than 900px */
 @media (max-width: 900px) {
   .hero-section {
-    margin-left: 70px; /* Minimal margin */
+    margin-left: 30px; /* Minimal margin */
   }
   
   .hero-content h1 {
@@ -1265,6 +1265,8 @@ of dropdown*/
     display: block; /* Ensures the image is treated as a block-level element */
     margin: 0 auto; /* Horizontally center the image */
   }
+
+
 }
 
 /* For screens smaller than 700px */
@@ -1287,14 +1289,25 @@ of dropdown*/
   }
 }
 
+@media (max-width: 600px) {
+
+  .hero-image img{
+    width: 85%;
+  }
+}
+
+
 /* For screens smaller than 500px (mobile screens) */
 @media (max-width: 500px) {
   .hero-section {
-    margin-left: 0px; /* No margin */
+    padding-left: 25px;
+    padding-right: 25px;
+    margin-left: 0px;
   }
 
   .hero-content h1 {
     font-size: 1.4em; /* Smallest header size */
+
   }
 
   .hero-content p {
@@ -1306,38 +1319,33 @@ of dropdown*/
     padding: 5px 8px; /* Minimal padding */
   }
 
-  .hero-image{
-
+  .hero-image img{
+    width: 90%;
   }
 }
 
-@media (max-width: 520px) {
-  /* Styles for smaller mobile devices */
 
-
-
-  .hero-content h1 {
-    font-size: 1.1em; /* Smallest header size */
-  }
-
-  .hero-content p {
-    font-size: 0.8em;
-   
-   }
-
-}
 
 
 
 @media (max-width: 380px) {
   /* Styles for smaller mobile devices */
   .hero-content h1 {
-    font-size: 1.0em; /* Smallest header size */
+    font-size: 1.1em; /* Smallest header size */
   }
 .hero-content p {
-  font-size: 0.7em;
+  font-size: 0.9em;
  
  }
+  
+}
+
+@media (max-width: 330px) {
+  .hero-section{
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+ 
   
 }
 
