--- a/web.css
+++ b/web.css
@@ -815,13 +815,79 @@ of dropdown*/
 }
 
 
+@media only screen and (max-width: 1080px) {
+
+
+  .lawn-mowing-content h1{
+    font-size: 2.5;
+  }
+  .lawn-mowing-content p{
+    width: calc(100% - 10px);
+    font-size: 1.1em;
+  }
+
+  .lawn-mowing-content{
+    margin-left: 50px;
+  }
+  
+}
+
+@media only screen and (max-width: 950px) {
+
+
+
+  .lawn-mowing-content h1{
+    font-size: 2.5;
+  }
+  .lawn-mowing-content p{
+    width: calc(100% - 10px);
+    font-size: 1.1em;
+  }
+
+  .lawn-mowing-content{
+   
+  }
+  
+}
+
+@media only screen and (max-width: 800px) {
+
+
+
+  .lawn-mowing-content h1{
+    font-size: 2.5;
+  }
+  .lawn-mowing-content p{
+    width: calc(100% - 10px);
+    font-size: 1.1em;
+  }
+
+  .lawn-mowing-content{
+    margin-left: 10px;
+  }
+  
+}
+
+@media only screen and (max-width: 670px) {
+
+
+
+ 
+  .lawn-mowing-content{
+    margin-left: -10px;
+  }
+  
+}
+
+
+
 
 @media only screen and (max-width: 580px) {
   #lawn-mowing-section {
     height: 300px;
   }
   .lawn-mowing-content{
-    margin-left: 0px;
+    margin-left: -20px;
   }
 
   .lawn-mowing-content h1{
@@ -848,7 +914,8 @@ of dropdown*/
     font-size: 0.8em;
   }
   .lawn-button-container a{
-    font-size: 1.0em;
+    font-size: 0.8em;
+    padding: 8px
   }
 }
 
@@ -931,6 +998,63 @@ of dropdown*/
 
 
 
+@media only screen and (max-width: 1080px) {
+
+
+  .hedge-trimming-content h1{
+    font-size: 2.5;
+  }
+  .hedge-trimming-contentt p{
+    font-size: 1.1em;
+  }
+
+  .hedge-trimming-content{
+    margin-right: 50px;
+  }
+  
+}
+
+@media only screen and (max-width: 950px) {
+
+
+
+  .hedge-trimming-content h1{
+    font-size: 2.5;
+  }
+  .hedge-trimming-content p{
+    font-size: 1.1em;
+  }
+
+  
+}
+
+@media only screen and (max-width: 800px) {
+
+
+
+  .hedge-trimming-content h1{
+    font-size: 2.5;
+  }
+  .hedge-trimming-content p{
+    font-size: 1.1em;
+  }
+
+  .hedge-trimming-content{
+    margin-right: 10px;
+  }
+  
+}
+
+@media only screen and (max-width: 670px) {
+
+
+
+ 
+  .hedge-trimming-content{
+    margin-right: 0px;
+  }
+  
+}
 
 
 @media only screen and (max-width: 580px) {
@@ -938,7 +1062,7 @@ of dropdown*/
     height: 300px;
   }
   .hedge-trimming-content{
-    margin-right: 0px;
+    margin-right: -20px;
   }
   .hedge-trimming-content h1{
 
@@ -968,7 +1092,8 @@ of dropdown*/
   }
 
   .hedge-button-container a {
-  font-size: 1.0em;
+  font-size: 0.8em;
+  padding: 8px;
   }
   
 }
@@ -1055,6 +1180,69 @@ of dropdown*/
   transform: translateY(-5px);
 }
 
+
+@media only screen and (max-width: 1080px) {
+
+
+  .garden-maintenance-content h1{
+    font-size: 2.5;
+  }
+  .garden-maintenance-content p{
+    width: calc(100% - 10px);
+    font-size: 1.1em;
+  }
+
+  .garden-maintenance-content{
+    margin-left: 50px;
+  }
+  
+}
+
+@media only screen and (max-width: 950px) {
+
+
+
+  .garden-maintenance-content h1{
+    font-size: 2.5;
+  }
+  .garden-maintenance-content p{
+    width: calc(100% - 10px);
+    font-size: 1.1em;
+  }
+
+}
+
+@media only screen and (max-width: 800px) {
+
+
+
+  .garden-maintenance-content h1{
+    font-size: 2.5;
+  }
+  .garden-maintenance-content p{
+    width: calc(100% - 10px);
+    font-size: 1.1em;
+  }
+
+  .garden-maintenance-content{
+    margin-left: 10px;
+  }
+  
+}
+
+@media only screen and (max-width: 670px) {
+
+
+
+ 
+  .garden-maintenance-content{
+    margin-left: -10px;
+  }
+  
+}
+
+
+
 @media only screen and (max-width: 580px) {
   #garden-maintenance-section {
     height: 300px;
@@ -1089,8 +1277,9 @@ of dropdown*/
     font-size: 0.8em;
   }
 
-  .garden-button-container a {
-    font-size: 1.0em;
+  .garden-maintenance-content a{
+    font-size: 0.8em;
+    padding: 8px
   }
   
 }
@@ -1189,7 +1378,7 @@ of dropdown*/
   }
 
   .hero-button {
-    font-size: 1em; /* Further reduce button text size */
+    font-size: 1.5em; /* Further reduce button text size */
     padding: 10px 20px; /* Adjust button padding */
   }
 
@@ -1284,7 +1473,7 @@ of dropdown*/
   }
 
   .hero-button {
-    font-size: 0.85em; /* Smaller button text */
+    font-size: 0.95em; /* Smaller button text */
     padding: 6px 10px; /* Adjust padding */
   }
 }
@@ -1315,7 +1504,7 @@ of dropdown*/
   }
 
   .hero-button {
-    font-size: 0.8em; /* Smallest button text size */
+    font-size: 0.95em; /* Smallest button text size */
     padding: 5px 8px; /* Minimal padding */
   }
 
@@ -1391,12 +1580,13 @@ of dropdown*/
 }
 
 
+
 .testimonial-carousel {
   position: relative; /* Relative positioning for absolute child elements */
  z-index: 1;
   height: 300px; /* Set height to accommodate testimonials */
   overflow: hidden; /* Hide overflow to manage stacking */
-  max-width: 100%; /* Set maximum width */
+  
   
 }
 
@@ -1591,6 +1781,57 @@ of dropdown*/
 
 
 
+@media (max-width: 500px) {
+  .testimonial-carousel{
+    width: 200%;
+    margin-left: -46vw; /*adapt with screen width */
+  }
+
+  .arrow-container {
+    display: flex; /* Use flexbox */
+    justify-content: center; /* Center the content horizontally */
+    align-items: center; /* Align content vertically */
+    gap: 20px; /* Space between arrows and button */
+  }
+
+  .new-left-arrow,
+  .new-right-arrow {
+    position: relative; /* Use relative to adjust positioning as needed */
+    font-size: 2em; /* Adjust size as needed */
+    background-color: rgb(74, 77, 70);
+    border-radius: 50%; /* Makes the button circular */
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .new-left-arrow{
+   position: relative;
+   
+  }
+  
+  .new-right-arrow{
+    position: relative;
+    
+   }
+   
+}  
+
+@media (max-width: 414px){
+  .testimonial-carousel{
+    width: 250%;
+    margin-left: -67vw;
+  }
+}
+
+@media (max-width: 350px){
+  .testimonial-carousel{
+    width: 280%;
+    margin-left: -80vw;
+  }
+}
 
 /* Footer styling */
 .footer {
@@ -1719,13 +1960,23 @@ of dropdown*/
   padding: 40px;
   background-color: whitesmoke;
   margin-top: 150px;
-  height: 80vh; /* Let content define height */
+  height: 700px; /* Let content define height */
 }
 
 .scheduler {
   flex-basis: 45%; /* Allow this section to take 45% of the width */
   margin-right: 90px; /* Small gap between sections */
   padding-left: 30px; /*to keep a gap*/
+  display: flex;
+  flex-direction: column; /* Stack title and form vertically */
+  justify-content: center; /* Center everything vertically */
+  align-items: center; /* Center everything horizontally */
+  text-align: center; /* Center text */
+  height: 100%; /* Take full available height */
+
+
+
+
 }
 
 /* Bonuses Section */
@@ -1779,8 +2030,8 @@ of dropdown*/
   color: black; /* White text color */
   font-weight: bold;
   font-family: 'roboto';
-
-  margin-bottom: -40px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 /* Contact Section */
@@ -1788,8 +2039,7 @@ of dropdown*/
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 70vh; /* Full viewport height */
-  padding-top: 50px;
+  
 }
 
 /* Contact Form */
@@ -1837,6 +2087,55 @@ of dropdown*/
 .contact-form button:hover {
   background-color: green; /* Slightly darker yellow on hover */
 }
+
+@media (max-width: 1980px) and (max-height: 740px) {
+
+    .quote-bonus-section{
+      height: 650px;
+    }
+
+
+}
+
+
+@media (max-width: 1980px) and (max-height: 650px) {
+
+
+
+
+}
+
+/*when split vertically*/
+@media (max-width: 1000px)  {
+
+
+
+
+  .contact-section{
+    margin-top: 50px;
+    margin-bottom: 90px;
+
+  }
+
+}
+
+@media (max-width: 1000px) and (max-height: 540px) {
+
+
+
+
+  
+
+}
+
+@media (max-width: 1000px) and (max-height: 420px) {
+
+
+
+}
+
+
+
 
 @media(max-width: 1250px){
   .scheduler{
