--- a/web.css
+++ b/web.css
@@ -1560,7 +1560,7 @@ of dropdown*/
 }
 
 #happy-customers h2 {
-  font-size: 1.5em;
+  font-size: 2.5em;
   position: relative;
   margin-bottom: 20px;
   color: rgb(11, 79, 7);
@@ -1779,9 +1779,15 @@ of dropdown*/
 }
 
 
+.new-left-arrow{
+  display: none;
+}
 
+.new-right-arrow{
+  display: none;
+}
 
-@media (max-width: 500px) {
+@media (max-width: 850px) {
   .testimonial-carousel{
     width: 200%;
     margin-left: -46vw; /*adapt with screen width */
@@ -1818,6 +1824,56 @@ of dropdown*/
    }
    
 }  
+
+@media (max-width: 600px){
+  #happy-customers h2 {
+    font-size: 2.2em;
+  }
+  
+  #happy-customers h3 {
+    font-size: 2.2em;
+
+  }
+}
+
+@media (max-width: 530px){
+  #happy-customers h2 {
+    font-size: 1.8em;
+  }
+  
+  #happy-customers h3 {
+    font-size: 1.8em;
+
+  }
+
+  #happy-customers{
+    background-size: 100% 100%; /* Stretches the image to fit both width and height */
+    background-repeat: no-repeat; /* Prevents repeating */
+ 
+  }
+}
+
+@media (max-width: 450px){
+  #happy-customers h2 {
+    font-size: 1.5em;
+  }
+  
+  #happy-customers h3 {
+    font-size: 1.5em;
+
+  }
+}
+
+@media (max-width: 380px){
+  #happy-customers h2 {
+    font-size: 1.3em;
+  }
+  
+  #happy-customers h3 {
+    font-size: 1.3em;
+
+  }
+}
 
 @media (max-width: 414px){
   .testimonial-carousel{
