--- a/web.css
+++ b/web.css
@@ -97,12 +97,14 @@ header {
   cursor: pointer; /* Makes it clickable */
 }
 
+
 .nav-bar ul {
   display: flex;
+  position: relative;
   gap: 50px;  /*to increase gap between words*/
-  margin-right: -70px ;
+  margin-right: -70px;
   margin-top: 17px;
-  margin-left: 380px;
+
 }
 
 .nav-bar ul li a {
@@ -207,20 +209,10 @@ header {
 
 }
 
-@media only screen and (max-width: 1200px){
-  .header-logos{
-    display: none;
-  }
-}
-
-
-
-
-
 
 @media only screen and (max-width: 1320px){
   header{
-    padding: 0 50px;
+   
   }
 
   .dropdown-content{
@@ -230,7 +222,14 @@ header {
 }
 
 
+@media only screen and (max-width: 1200px){
+  .header-logos{
+    display: none;
+  }
+}
 
+
+/*hamburgder dictator*/
 @media only screen and (max-width: 1200px) {
   .hamburger {
       display: block;
@@ -259,14 +258,15 @@ header {
   .nav-bar {
       height: 0px;
       position: absolute;
-      top: 80px; /* put nav bar below header*/
+      top: 90px; /* put nav bar below header*/
       left: 0; /*take full width of the screen*/
       right: 0; /*take full width of the screen*/
       width: 100vw; /*full width of view point */
+
      
       transition: 0.5s;
       overflow: hidden;
-      z-index:1000; /* Higher z-index to stay on top */
+      z-index:10000000; /* Higher z-index to stay on top */
       
   }
 
@@ -281,7 +281,7 @@ header {
   .nav-bar.active{ /*when activated*/
     height: 700px;
     background-color: rgb(79, 141, 57);
-    top:130px;
+    top:130px; /*change placement*/
   }
 
   .nav-bar ul{
@@ -292,15 +292,66 @@ header {
     transition: 0.5s;
     opacity: 0;
   }
+  
   .nav-bar.active ul{ /*when nav bar is active, what happens to ul*/
     opacity: 1;
   }
   .nav-bar ul li a{
-    margin-bottom: 12px;
+    margin-bottom: -12px;
   }
 
-
+  .downArrow{
+    display: none;
+  }
 }
+
+@media only screen and (max-width: 580px){
+  .nav-bar.active{
+    height: 500px;
+  }
+  .nav-bar ul{
+    margin: 0px auto 0 auto;
+  }
+
+  .nav-bar ul li a{
+    font-size: 15px;
+    margin-bottom: -30px;
+  }
+  }
+
+  @media only screen and (max-width: 350px){
+    .nav-bar.active{
+      height: 475px;
+    }
+    .nav-bar ul{
+      margin: 0px auto 0 auto;
+    }
+  
+    .nav-bar ul li a{
+      font-size: 13px;
+
+    }
+    }
+
+@media only screen and (max-width: 450px){
+.nav-bar.active{
+  top: 120px;
+}
+}
+
+@media only screen and (max-width: 380px){
+  .nav-bar.active{
+    top: 110px;
+  }
+}
+
+@media only screen and (max-width: 320px){
+  .nav-bar.active{
+    top: 100px;
+  }
+}
+
+
 
 
 .dropdown-content {
@@ -2948,6 +2999,9 @@ position: relative; /* For positioning children */
   cursor: pointer;
   margin-bottom: 20px;
   position: 0px;
+  padding-right: 10px;
+  padding-top: 10px;
+  margin-right: -20px;
 
 }
 
@@ -2960,7 +3014,7 @@ position: relative; /* For positioning children */
 
 /* Modal logo */
 .modal-logo  {
-  width: 200%;
+  width: 230%;
   height: auto;
 
 }
@@ -3058,28 +3112,60 @@ resize: none;
   background-color: green;
 }
 
-/* Modal Styling */
-.modal-content {
-  background-color: #fefefe;
-  margin: 10% auto;
-  padding: 40px;
-  border: 1px solid #888;
-  width: 50%;
-  border-radius: 10px;
-  text-align: center;
-  
+
+
+@media (max-width: 1200px) {
+  .modal-content {
+
+    margin: 10% auto;
+    padding-left: 0px; /* Add space on the left */
+    padding-right: 0px; /* Add space on the right */
+    border: 1px solid #888;
+    width: 70%;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  .close{
+    margin-right: 0px;
+  }
+
+    /* Modal logo */
+.modal-logo  {
+  width: 200%;
 }
 
-@media (max-width: 768px) {
-  .modal-content {
-    width: 100vw; /* Full viewport width */
+}
 
-    margin: 0; /* Remove top margin */
-    border-radius: 0; /* Remove rounded corners */
-    max-height: none; /* Remove max height */
-    padding: 0px;
+@media (max-width: 850px) {
+ .modal-content {
+    background-color: #fefefe;
+    margin: 10% auto;
+    padding-top: 20px; /* Adjusted padding */
+    padding-bottom: 20px; /* Adjusted padding */
+
+    border: 1px solid #888;
+    width: 80%;
+  }
+
+    /* Modal logo */
+.modal-logo  {
+  width: 200%;
+}
+
+.logo-container{
+  width: 40%; 
+}
+
+
+}
+
+@media (max-width: 440px){
+  .logo-container{
+  width: 50%; 
   }
 }
+
 
 
 
@@ -3116,16 +3202,7 @@ resize: none;
   padding-right: 40px;
 }
 
-@media(max-width: 500px){
-  .service-selection {
-    padding-left: 0px; /*decrease gap */
-    padding-right: 0px;
-  }
 
-  .next-btn {
-    margin-bottom: 0px;
-  }
-}
 
 .service-box {
   width: 45%;
@@ -3166,6 +3243,7 @@ resize: none;
   height: auto;
 }
 
+
 .service-box p {
   font-size: 15px;
   font-weight: bold;
@@ -3179,19 +3257,260 @@ resize: none;
   font-family: 'Roboto', sans-serif;
 }
 
+@media (max-width: 650px) {
+  /* Adjust size of logos inside boxes */
+  .service-icon {
+    width: 50px;
+    height: auto;
+  } 
+
+  .service-box p {
+    font-size: 12px;
+
+  }
 
 
+}
 
+@media(max-width: 600px){
+  .service-selection {
+    padding-left: 10px; /*decrease gap */
+    padding-right: 10px;
+  }
 
+  .next-btn {
+    margin-bottom: 0px;
+  }
+}
+
+@media (max-width: 470px) {
+  /* Adjust size of logos inside boxes */
+  .service-icon {
+    width: 40px;
+    height: auto;
+  } 
+
+  .service-box p {
+    font-size: 11px;
+
+  }
+  .service-box {
+   
+    height: 100px;
+    }
+
+}
+
+@media (max-width: 420px) {
+  /* Adjust size of logos inside boxes */
+  .service-icon {
+    width: 37px;
+    height: auto;
+  } 
+
+  .service-box p {
+    font-size: 10px;
+
+  }
+
+}
+
+@media (max-width: 350px) {
+  /* Adjust size of logos inside boxes */
+  .service-icon {
+    width: 30px;
+    height: auto;
+ 
+  } 
+  .garden-icon{
+    margin-left: 20px;
+  }
+
+  .service-box p {
+    font-size: 9px;
+
+  }
+  .service-box {
+   
+    height: 80px;
+    }
+
+}
+
+@media (max-width: 300px) {
+  /* Adjust size of logos inside boxes */
+  .service-icon {
+    width: 25px;
+    height: auto;
+    margin-left: 10px;
+ 
+  } 
+  .garden-icon{
+    margin-left: 20px;
+  }
+
+  .service-box p {
+    font-size: 8px;
+
+  }
+  .service-box {
+   
+    height: 80px;
+    }
+
+    .progress-container{
+      padding-left: 25px;
+    }
+
+    .modal-text{
+
+      font-size: 15px;
+    }
+}
 
 
 
 
 /* bigger screens */
-
+@media (max-width: 1980px) and (min-width: 1700px) {
+  .blog-header {
+    font-size: 3.5em; /* Adjust font size as needed */
+    left: 180px;
+  
+  }
+  
+  
+  
+  
+  .view-more {
+    font-size: 2.6em; /* Adjust font size as needed */
+  
+    margin-right: 10px; /* Add space between the text and the image */
+    
+    padding-right: 240px;
+  }
+  
+  
+  
+  .frame-image {
+    width: 60px; /* Adjust size as needed */
+    height: auto; /* Maintain aspect ratio */
+  
+    position: absolute;
+    padding-top: 25px;
+    margin-right: 180px;
+    right: 0;
+    transition: filter 0.3s ease; /* Smooth transition for the effect */
+  }
+  
+  
+  .frame-image:hover {
+    filter: invert(60%) sepia(100%) saturate(400%) hue-rotate(60deg) brightness(100%) contrast(95%); /* Approximates the #78de3c color */
+  }
+  
+  
+  
+  .blogs-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive grid */
+    gap: 70px;
+    justify-content: center; /* Aligns grid items horizontally */
+    justify-items: center;   /* Ensures each grid item is centered within its cell */
+    padding: 125px; /* Padding around the container */
+  
+  }
+  
+  
+  
+  .blog-item {
+  background: #d8efdf; /*#1a961a;*/
+  width: 480px; /* Adjust width as needed */
+  height: 620px;
+  padding: 0px; /* Add padding inside each service item */
+  border-radius: 20px;
+  font-family: roboto;
+  
+  transition: transform 0.3s ease;
+  overflow: hidden; /* Ensures child elements do not overflow */
+  position: relative; /* For positioning children */
+  }
+  
+  
+  
+  .blog-item a {
+    position: absolute; /* Makes the anchor cover the entire service item */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; /*0 because we want it to cover the parent*/
+    padding: 20px; /* Keep padding to match .service-item */
+    border-radius: 0px; /* Matches the parent border-radius */
+  }
+  
+  
+  .blog-item:hover {
+    transform: translateY(-10px);
+    
+  }
+  
+  .blog-item img {
+    width: 480px;
+    height: 350px;
+    margin-bottom: 10px;
+  }
+  
+  .blog-item h3 {
+    color: #2E8B57;
+    font-size: 1.8em;
+  
+  }
+  
+  
+  .blog-item p {
+    font-size: 1.3em;
+    max-width: 500px;
+  
+  }
+  
+  .read-more {
+    font-size: 1.6em;
+  
+  }
+}  
 
 @media (max-width: 1980px) and (min-width: 1600px) {
 
+
+  /*header*/
+  .nav-bar ul {
+    display: flex;
+    position: relative;
+    gap: 80px;  /*to increase gap between words*/
+    margin-right: -70px;
+    margin-top: 17px;
+  
+  }
+  
+  .nav-bar ul li a {
+    display: block;
+    color: white;
+    font-size: 22px;
+    font-family: 'Open Sans';
+    font-weight: 600;
+    padding: 10px 25px;
+    margin-top: 50px !important;
+    
+    border-radius: 50px;
+    transition: 0.2s;
+    margin: 0 5px;
+  
+
+
+
+
+
+
+  
   /*drop down content*/
   .welcome-dropdown {
     height: 950px;
@@ -3545,109 +3864,6 @@ resize: none;
 
 
 
-.blog-header {
-  font-size: 3.5em; /* Adjust font size as needed */
-  left: 180px;
-
-}
-
-
-
-
-.view-more {
-  font-size: 2.6em; /* Adjust font size as needed */
-
-  margin-right: 10px; /* Add space between the text and the image */
-  
-  padding-right: 240px;
-}
-
-
-
-.frame-image {
-  width: 60px; /* Adjust size as needed */
-  height: auto; /* Maintain aspect ratio */
-
-  position: absolute;
-  padding-top: 25px;
-  margin-right: 180px;
-  right: 0;
-  transition: filter 0.3s ease; /* Smooth transition for the effect */
-}
-
-
-.frame-image:hover {
-  filter: invert(60%) sepia(100%) saturate(400%) hue-rotate(60deg) brightness(100%) contrast(95%); /* Approximates the #78de3c color */
-}
-
-
-
-.blogs-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive grid */
-  gap: 70px;
-  justify-content: center; /* Aligns grid items horizontally */
-  justify-items: center;   /* Ensures each grid item is centered within its cell */
-  padding: 125px; /* Padding around the container */
-
-}
-
-
-
-.blog-item {
-background: #d8efdf; /*#1a961a;*/
-width: 480px; /* Adjust width as needed */
-height: 620px;
-padding: 0px; /* Add padding inside each service item */
-border-radius: 20px;
-font-family: roboto;
-
-transition: transform 0.3s ease;
-overflow: hidden; /* Ensures child elements do not overflow */
-position: relative; /* For positioning children */
-}
-
-
-
-.blog-item a {
-  position: absolute; /* Makes the anchor cover the entire service item */
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; /*0 because we want it to cover the parent*/
-  padding: 20px; /* Keep padding to match .service-item */
-  border-radius: 0px; /* Matches the parent border-radius */
-}
-
-
-.blog-item:hover {
-  transform: translateY(-10px);
-  
-}
-
-.blog-item img {
-  width: 480px;
-  height: 350px;
-  margin-bottom: 10px;
-}
-
-.blog-item h3 {
-  color: #2E8B57;
-  font-size: 1.8em;
-
-}
-
-
-.blog-item p {
-  font-size: 1.3em;
-  max-width: 500px;
-
-}
-
-.read-more {
-  font-size: 1.6em;
-
-}
 
 
 
@@ -3712,3 +3928,4 @@ position: relative; /* For positioning children */
 
 
 }
+
